# ExistenceGasFlowRuns

./: .gitignore  README.md
data/: GasLib-40-runs.csv
data/GasLib-40/: network.json
data/runs/: GasLib-40-runs-1.csv  GasLib-40-runs-point5.csv  GasLib-40-runs.csv
src/julia/: Manifest.toml  Project.toml  main.jl
src/python/: Pipfile  analysis.py  final.ipynb  plot-GasLib-40.ipynb  plot_network.ipynb  pyproject.toml  v1.ipynb  v2.ipynb
src/python/plots/1/: params.txt
src/python/plots/original/: params.txt
src/python/plots/point5/: params.txt
