[tool.poetry]
name = "existencegasflowruns"
version = "0.1.0"
description = ""
authors = ["Kaarthik Sundar <kaarthik01sundar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
sympy = "^1.12"
networkx = "^3.2.1"
pandas = "^2.2.1"
jupyter = "^1.0.0"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
